# cyberpong

./: CMakeLists.txt
src/: main.cpp
src/entities/: ball.hpp  entity.hpp  player.hpp
src/physics/: collision.hpp
src/setup/: screen.hpp
src/world/: solids.hpp
